# curldl

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  README.md  pyproject.toml  venv.sh
.github/workflows/: ci.yml  tests.yml
docs/: CHANGELOG.md  conf.py  index.md
docs/changelog.d/: 12.feature.md  16.feature.md  17.feature.md  19.feature.md  22.feature.md  23.feature.md  26.feature.md  29.bugfix.md  29.feature.md  32.feature.md  33.feature.md  35.bugfix.md  36.feature.md  38.feature.md  40.feature.md  44.feature.md  46.feature.md  47.feature.md  49.doc.md  49.feature.md  51.feature.md  52.feature.txt  53.feature.md  54.doc.md  56.feature.md  63.bugfix.md  64.bugfix.md  66.bugfix.md  68.bugfix.md  70.feature.md  8.feature.md  9.feature.md  README.md
extra/gohlke/: README.md  pycurl-7.45.1-cp310-cp310-win32.whl  pycurl-7.45.1-cp310-cp310-win_amd64.whl  pycurl-7.45.1-cp311-cp311-win32.whl  pycurl-7.45.1-cp311-cp311-win_amd64.whl  pycurl-7.45.1-cp38-cp38-win32.whl  pycurl-7.45.1-cp38-cp38-win_amd64.whl  pycurl-7.45.1-cp39-cp39-win32.whl  pycurl-7.45.1-cp39-cp39-win_amd64.whl
flows/github/: tests.yml
misc/conda/: test-environment.yml
misc/scripts/: run-bandit.sh  run-black.sh  run-isort.sh  run-mypy.sh  run-pylint.sh  run-sphinx.sh
requirements/: base.txt  environment.txt  tests.txt
scripts/: python-venv.sh  venv.sh
src/curldl/: __init__.py  __main__.py  cli.py  curldl.py  py.typed  util.py
src/curldl/util/: __init__.py  crypt.py  fs.py  log.py  time.py
tests/: __init__.py
tests/curldl/: test_nothing.py
tests/functional/: __init__.py  test_cli.py  test_crypt.py  test_curldl.py  test_downloader.py  test_fs.py  test_log.py  test_nothing.py  test_time.py
tests/system/: __init__.py  test_parallelism.py  test_redirection.py  test_retries.py  test_security.py
tests/unit/: __init__.py  test_crypt.py  test_curldl.py  test_downloader.py  test_fs.py  test_log.py  test_time.py
