# PEP 518, 621

[project]
name = "curldl"
version = "0.1.0"
description = "Safely and reliably download files with PycURL"
keywords = ["cURL", "PycURL", "download"]

readme = "README.md"
license = {text = "LGPL-3.0-or-later"}

authors = [{name = "Michael Orlov", email = "orlovm@noexec.org"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: System :: Networking"
]

requires-python = ">=3.8"
dependencies = [
    "pycurl",               # PycURL wrapper for cURL library
    "tenacity",             # retry policies
    "tqdm"                  # console progress bar
]

[project.optional-dependencies]
environment = [
    "ipython",              # interactive Python environment
    "pipdeptree",           # show packages dependency tree
    "pip-autoremove",       # remove unused package dependencies
    "pip-review",           # upgrade outdated packages
    "wheel"                 # build system, support PEP 518 installs
]

test = [
    "bandit[toml]",         # security issues checks
    "pytest",               # pytest testing framework
    "pytest-cov",           # code coverage (--cov)
    "pytest-httpserver",    # HTTP server fixture
    "pytest-mock",          # mocker fixtures for monkey patching
    "pytest-mypy",          # type hinting verifier (--mypy)
    "pytest-pylint",        # static code analysis (--pylint)
    "pytest-repeat",        # repeating tests (@pytest.mark.repeat)
    "pytest-sugar",         # look-and-feel for pytest progress
    "pytest-xdist[psutil]", # distributed tests (-n logical --no-pylint)
    "toml",                 # reading project.version from this file
    "types-pycurl",         # external type annotations: pycurl
    "types-toml",           # external type annotations: toml
    "types-tqdm"            # external type annotations: tqdm
]

[project.urls]
repository = "https://github.com/noexec/curldl"

[project.scripts]
curldl = "curldl.cli:main"


[build-system]
requires = ["setuptools", "wheel"]


[tool.setuptools.package-data]
"curldl" = ["py.typed"]     # PIP 561


[tool.pytest.ini_options]
addopts = "--mypy --pylint --pylint-jobs 0 --cov --cov-report=term --cov-report=html"
testpaths = ["tests", "src"]
cache_dir = "build/tests/pytest_cache"

filterwarnings = [
    "default",
    "ignore::DeprecationWarning:pytest_pylint.plugin",          # pytest-pylint 0.19.0
    "ignore::DeprecationWarning:pytest_pylint.pylint_util"      # pytest-pylint 0.19.0
]


[tool.pylint.main]
py-version = "3.8"

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120

[tool.pylint.design]
min-public-methods = 1
max-args = 10
max-attributes = 15
max-locals = 20

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"]


[tool.mypy]
warn_unused_configs = true
cache_dir = "build/tests/mypy_cache"

allow_redefinition = true
warn_unreachable = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_incomplete_stub = true

disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true


[tool.coverage.run]
data_file = "build/tests/coverage.sqlite"
omit = ["/etc/*"]

branch = true
dynamic_context = "test_function"

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "build/tests/htmlcov"
show_contexts = true
skip_covered = false


[tool.bandit]
exclude_dirs = ["venv", "build"]
skips = ["B101"]
